# bullcrap_profiling

./: Cargo.toml
benches/: bench1.rs
examples/: main.rs
src/: lib.rs
