[package]
name = "test_palindroms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench1"
harness = false

[[example]]
name = "showcase"
path = "examples/main.rs"

[profile.release]
panic = "abort"
debug = true

[profile.dev]
panic = "abort"
